--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,37 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+
+:root{
+  --max-width: 1400px;
+  --nav-bg: #a3a59e;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+body {
+  /* background-color: #000; */
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.center-container{
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 0.5rem;
 }
