--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -4,14 +4,14 @@
 }
 
 .hero-container .center-container {
+  height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* justify-content: space-between; */
-  height: 100%;
-  align-content: center;
+  place-items: center;
+  gap: 1rem;
 }
 
-.hero-container .author-title{
+.hero-container .author-title {
   width: fit-content;
 }
 
@@ -63,21 +63,20 @@
   font-weight: bold;
 }
 
-
-.hero-container .author-desc{
+.hero-container .author-desc {
   margin-top: 2rem;
   line-height: 1.6;
   /* text-indent:2rem; */
 }
 
- .socials{
+.socials {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2rem;
   margin: 3rem auto 0 auto;
 }
- .socials button{
+.socials button {
   font: inherit;
   display: flex;
   align-items: center;
@@ -87,27 +86,115 @@
   border: 1px solid blue;
   cursor: pointer;
 
-
-  transform: perspective(800px) rotateY(25deg) scale(0.9)
-  rotateX(10deg);
+  transform: perspective(800px) rotateY(25deg) scale(0.9) rotateX(10deg);
   filter: blur(1px);
   opacity: 0.7;
   transition: 0.6s ease all;
-
 }
 
-.socials button:hover{
-  transform:
-  perspective(800px)
-  rotateY(-15deg)
-  /* translateY(-50px) */
-  rotateX(10deg)
-  scale(1);
-filter: blur(0);
-opacity: 1;
+.socials button:hover {
+  transform: perspective(800px) rotateY(-15deg) /* translateY(-50px) */
+    rotateX(10deg) scale(1);
+  filter: blur(0);
+  opacity: 1;
 }
-.socials span{
+.socials span {
   /* font-size: 1.1rem; */
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.scene {
+  width: 400px;
+  height: 400px;
+
+  /* border: 1px solid #ccc; */
+  perspective: 600px;
+}
+
+.cube {
+  width: 400px;
+  height: 400px;
+
+  position: relative;
+  transform-style: preserve-3d;
+  transform: translateZ(-200px);
+  animation: spinCube 30s infinite linear;
+  /* animation: spinCube 15s 1 linear; */
+}
+
+@keyframes spinCube {
+  0% {
+    transform: translateZ(-200px) rotateX(0deg) rotateY(0deg);
+  }
+  14.29% {
+    transform: translateZ(-200px) rotateY(90deg);
+  }
+  28.58% {
+    transform: translateZ(-200px) rotateY(180deg);
+  }
+  42.87% {
+    transform: translateZ(-200px) rotateY(270deg);
+  }
+  57.16% {
+    transform: translateZ(-200px) rotateX(90deg);
+  }
+  71.45% {
+    transform: translateZ(-200px) rotateX(180deg);
+  }
+  85.74% {
+    transform: translateZ(-200px) rotateX(270deg);
+  }
+  100% {
+    transform: translateZ(-200px) rotateX(360deg);
+  }
+  /* 100% {
+    transform: translateZ(-200px) rotateX(0deg) rotateY(0deg);
+  } */
+}
+
+/* @keyframes spinCube {
+  0% {
+    transform: translateZ(-200px) rotateX(0deg) rotateY(0deg);
+  }
+  100% {
+    transform: translateZ(-200px) rotateX(360deg) rotateY(360deg);
+  }
+} */
+
+.cube img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.cube__face {
+  position: absolute;
+
+  width: 400px;
+  height: 400px;
+}
+
+.cube__face--front {
+  transform: rotateY(0deg) translateZ(220px);
+}
+.cube__face--right {
+  transform: rotateY(90deg) translateZ(220px);
+}
+.cube__face--back {
+  transform: rotateY(180deg) translateZ(220px);
+}
+.cube__face--left {
+  transform: rotateY(-90deg) translateZ(220px);
+}
+.cube__face--top {
+  transform: rotateX(90deg) translateZ(220px);
+}
+.cube__face--bottom {
+  transform: rotateX(-90deg) translateZ(220px);
+}
+
+.cube.is-backface-hidden .cube__face {
+  backface-visibility: hidden;
 }
