--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,6 +1,12 @@
 .hero-container {
-  /* padding-top: 100px; */
-  height: calc(100vh - 104px);
+  height: calc(100vh);
+  background-color: #eceff1;
+   /* transform: perspective(900px) rotateX(80deg) scale(0.7); */
+   transform-style: preserve-3d;
+   transform-origin: 50% 80%;
+  box-shadow: 0px 20px 100px #555;
+  transition: all 300ms linear;
+  /* background: linear-gradient(180deg, #eba65b 30%, #d99267); */
 }
 
 .hero-container .center-container {
@@ -20,16 +26,130 @@
   font-weight: 900;
   line-height: 1.4;
   /* background-image: linear-gradient(141deg, #969699, #1e1e22); */
+
+  background-image: linear-gradient(141deg, #969699, #1e1e22);
+    font-size: 70px;
+    text-align: center;
+    letter-spacing: -1.25px;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
+
+
+
+/* .windmil-stick-container{
+  position:relative;
+  margin-right: 0.8rem;
+  display: inline-block;
+}
+
+
+.windmil-stick{
+  position: absolute;
+  bottom: 27px;
+  width: 15px;
+  height: 150px;
+  background: #000;
+  display: inline-block;
+}
+
+
+.windmil-container {
+  width: 200px;
+  height: 200px;
+  border: 1px solid;
+  border-radius: 9999px;
+  animation: windmil-spin infinite 2s linear;
+  position: absolute;
+  top: -82px;
+  left: 62px;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
+@keyframes windmil-spin {
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
+
+
+
+
+
+.windmil-container .center-bullet {
+  width: 30px;
+  height: 30px;
+  background: #000;
+  border-radius: 9999px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.windmil-container .leaf {
+  width: 60px;
+  height: 30px;
+  background: #000;
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 99999px;
+  border-top-right-radius: 99999px;
+  border-bottom-right-radius: 50%;
+  position: absolute;
+}
+
+.windmil-container .leaf-1 {
+  top: 43%;
+  left: 59%;
+  transform: rotate(-10deg);
+}
+.windmil-container .leaf-2 {
+  top: 62%;
+  left: 50%;
+  transform: rotate(34deg);
+}
+.windmil-container .leaf-3 {
+  top: 67%;
+  left: 31%;
+  transform: rotate(70deg);
+}
+.windmil-container .leaf-4 {
+  top: 56%;
+  left: 13%;
+  transform: rotate(123deg);
+}
+.windmil-container .leaf-5 {
+  top: 34%;
+  left: 11%;
+  transform: rotate(180deg);
+}
+.windmil-container .leaf-6 {
+  top: 19%;
+  left: 27%;
+  transform: rotate(230deg);
+}
+.windmil-container .leaf-7 {
+  top: 23%;
+  left: 50%;
+  transform: rotate(288deg);
+} */
+/* windmil end */
+
+
 .hero-container .hi-there {
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .hero-container .habit-con-right {
   display: flex;
-  margin-top: 0.9rem;
+  /* margin-top: 0.5rem; */
 }
 
 .hero-container .habit-con {
@@ -72,7 +192,7 @@
 .socials {
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center;zv */
   gap: 2rem;
   margin: 3rem auto 0 auto;
 }
@@ -88,13 +208,12 @@
 
   transform: perspective(800px) rotateY(25deg) scale(0.9) rotateX(10deg);
   filter: blur(1px);
-  opacity: 0.7;
+  opacity: 0.6;
   transition: 0.6s ease all;
 }
 
 .socials button:hover {
-  transform: perspective(800px) rotateY(-15deg) /* translateY(-50px) */
-    rotateX(10deg) scale(1);
+  transform: perspective(800px) rotateY(-15deg) rotateX(10deg) scale(1);
   filter: blur(0);
   opacity: 1;
 }
@@ -108,7 +227,6 @@
   width: 400px;
   height: 400px;
 
-  /* border: 1px solid #ccc; */
   perspective: 600px;
 }
 
@@ -120,7 +238,6 @@
   transform-style: preserve-3d;
   transform: translateZ(-200px);
   animation: spinCube 30s infinite linear;
-  /* animation: spinCube 15s 1 linear; */
 }
 
 @keyframes spinCube {
@@ -148,19 +265,7 @@
   100% {
     transform: translateZ(-200px) rotateX(360deg);
   }
-  /* 100% {
-    transform: translateZ(-200px) rotateX(0deg) rotateY(0deg);
-  } */
 }
-
-/* @keyframes spinCube {
-  0% {
-    transform: translateZ(-200px) rotateX(0deg) rotateY(0deg);
-  }
-  100% {
-    transform: translateZ(-200px) rotateX(360deg) rotateY(360deg);
-  }
-} */
 
 .cube img {
   width: 100%;
