--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,13 +1,15 @@
 nav {
-  background-color: var(--nav-bg);
+  /* background-color: var(--nav-bg); */
+  /* background: rgb(0, 0, 0); */
+  background: rgba(0, 0, 0, 0.1);
   padding-top: 1.5rem;
   font-size: var(--nav-text-lg);
   animation: nav 5s linear infinite forwards;
-  position: absolute;
+  /* position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 100; */
 }
 
 nav .logo {
