--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,9 +1,12 @@
 .skills-container{
-    height: calc(100vh);
+    min-height: 100vh;
     padding: 2rem 0;
     display: grid;
     place-items: center;
     background-color: #eceff1;
+    /* border-bottom-left-radius: 100% 0%; */
+    /* border-bottom-right-radius: 50%; */
+   
 }
 
 
