--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,7 @@ a {
   --nav-bg: #a3a59e;
 }
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -123,13 +123,15 @@ html{
 
 html,
 body {
-  max-width: 100vw;
+  min-width: 100vw;
   overflow-x: hidden;
+ 
 }
 
-body {
-  /* background-color: #000; */
+body{
 }
+
+
 
 a {
   color: inherit;
@@ -144,4 +146,38 @@ a {
 
 header{
  
+}
+
+
+#smooth-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh; 
+     /* -webkit-transform-origin: top left;
+    transform-origin: top left;
+     -webkit-transform: translate3D(-159vw,-200vh,0) scale(36);
+    transform: translate3D(-159vw,-200vh,0) scale(36);  */
+}
+
+.cursor-element{
+  background: #fff;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+/* opacity: 0; */
+  transform: translate3d(0, 0, 0);
+  transition: transform 300ms cubic-bezier(0.02, 1.23, 0.79, 1.08);
 }
