--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -2,7 +2,27 @@
   height: calc(100vh);
   position: relative;
   background: #0d0d0d;
+  color: #fff;
+
+
+  transform-origin: 50% 90%;
+  transition: all 200ms linear;
+  /* background-color: #eceff1; */
+  /* background-color: #0A2647; */
+  /* background-color: #131313; */
+  overflow: hidden;
 }
+
+/* .cursor-pointer{
+  width: 20px;
+  height: 20px;
+  border-radius: 9999px;
+  position: fixed;
+  top: 100px;
+  left: 100px;
+  background: #f99a02;
+  transform: translate(-50%, -50%);
+} */
 
 .about-info-wrapper {
   position: absolute;
@@ -15,7 +35,7 @@
 }
 
 .about-info-center {
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -23,113 +43,137 @@
   justify-content: center;
   height: 100%;
   padding: 0 0.5rem;
+  /* position: relative;
+  z-index: 2; */
 }
 
 .about-info-center > :nth-child(1) {
-  color: #b7ab98;
+  /* color: #b7ab98; */
+  color: #fff;
   align-self: flex-start;
-  font-size: 1.3rem;
+  font-size: max(0.8rem, 1.3vw);
   font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 0.5rem;
 }
 
-.about-info-center > :nth-child(2) {
-  color: #b7ab98;
-  /* font-size: 1.2rem; */
-  font-size: 3.5rem;
+.about-info {
+  /* color: #b7ab98; */
+  color: #fff;
+  /* font-size: 3rem; */
+  /* font-size: 2.6vw; */
+  font-size: max(1rem, 2.6vw);
   font-weight: 900;
-  /* max-width: 50ch; */
   letter-spacing: 0.2rem;
-}
-
-.about-social {
-  align-self: flex-end;
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  margin-top: 1rem;
-}
-
-.about-social button {
-  font: inherit;
-  font-size: 1.2rem;
-  color: #b7ab98;
-  padding: 0.6rem 1.5rem;
-  border-radius: 4px;
-  border: none;
-  background: #b7ab9819;
-  text-transform: uppercase;
-  cursor: pointer;
+  width: 100%;
+  /* height: fit-content; */
   position: relative;
-
-  transform: perspective(800px) rotateY(25deg) rotateX(10deg);
-  filter: blur(1px);
-  opacity: 0.8;
-  transition: 0.6s ease all;
 }
 
-.about-social button:hover {
-  transform: perspective(800px) rotateY(-2deg) translateY(-5px) rotateX(2deg);
-  filter: blur(0);
-  opacity: 1;
-}
-
-.about-social a:first-child {
+.about-info > span {
+  display: inline-block;
   position: relative;
-  padding: 0.6rem 1rem 0.6rem 1.5rem;
 }
-.about-social a:last-child {
-  position: relative;
-  padding: 0.6rem 1.3rem 0.6rem 1rem;
-}
-.about-social button::before,
-.about-social a::before {
+
+.about-info > span::before {
   content: "";
+  width: 110vw;
+  height: 0%;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+  transition: all 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.about-info > span:hover::before {
+  height: 100%;
+}
+
+.about-socials {
+  list-style: none;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  width: 25vw;
+  width: max(200px, 25vw);
+}
+
+.about-socials li a {
+  display: inline-block;
+  font-size: 1.5vw;
+  font-size: max(0.8rem, 1.5vw);
+  width: 100%;
+  height: 100%;
+  padding: 0.2rem 0.8rem 0.2rem 0;
+  width: 100%;
+}
+
+.about-socials li {
+  position: relative;
+  transition: all 300ms;
+  width: 100%;
+}
+
+.about-socials li::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  transform: translate(-140%, -50%);
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  clip-path: polygon(
+    0% 15%,
+    15% 15%,
+    15% 0%,
+    85% 0%,
+    85% 15%,
+    100% 15%,
+    100% 85%,
+    85% 85%,
+    85% 100%,
+    15% 100%,
+    15% 85%,
+    0% 85%
+  );
+}
+
+.about-socials .mask {
+  width: 100%;
+  height: 100%;
+  background: gold;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
-  height: 0%;
-  width: 100%;
+  padding-left: 0.8rem !important;
+  clip-path: inset(50% 0 50% 0);
 
-  transition: all 300ms ease-in;
+  transition: clip-path 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-.about-social button:hover::before,
-.about-social a:hover::before {
-  height: 100%;
-  background: #eb5a39ab;
+.about-socials li:hover .mask {
+  clip-path: inset(0 0 0 0);
+  color: #0d0d0d;
 }
 
-
-
-.about-social > :nth-child(1) {
-  /* width: 121px; */
-  /* height: 50px; */
+.resume-mask {
   display: flex;
-  gap: 1rem;
-  position: relative;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.download-show {
-  position: absolute;
-  top: 0;
-  left: -50%;
-  /* padding: 0.6rem 1.5rem; */
-  border-radius: 4px;
-  background: #b7ab9819;
-  transform:
-    /* translateY(50px)  */ scale(0.5);
-  opacity: 0;
-  display: flex;
-  /* gap: 0.3rem; */
-  transition: all 300ms ease-in;
+.resume-mask a:first-child {
+  border-right: 1px solid;
 }
-
-.about-social > :nth-child(1):hover .download-show {
-  transform: translateY(50px) scale(1);
-  opacity: 1;
+.resume-mask a:last-child {
+  padding-left: 0.8rem;
 }
 
 .cube-wrapper {
