--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,7 +2,7 @@ nav {
   /* background-color: var(--nav-bg); */
   /* background: rgb(0, 0, 0); */
   background: rgba(0, 0, 0, 0.1);
-  padding-top: 1.5rem;
+  padding: 2rem 0 2.5rem 0;
   font-size: var(--nav-text-lg);
   animation: nav 5s linear infinite forwards;
   /* position: absolute;
@@ -12,29 +12,57 @@ nav {
   z-index: 100; */
 }
 
-nav .logo {
-  color: #fff;
+/* nav .logo {
+  color: #777777;
   text-transform: uppercase;
   font-size: 1.1rem;
-}
+} */
 
 nav .logo-container {
-  width: 150px;
+  
+  color: #777777;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+/* border: 1px solid red; */
+height: fit-content;
+
+
+  /* width: 150px;
   height: fit-content;
-  overflow: hidden;
+  overflow: hidden; */
+  
 }
 
-nav .logo-container .inner-container {
+
+
+.hero-layer-container .logo-container{
+  --size: 0%;
+  --x: 50%;
+  --y: 50%;
+  color: #fff;
+  clip-path: circle(var(--size) at var(--x) var(--y));
+  -webkit-clip-path: circle(var(--size) at var(--x) var(--y));
+  transition: clip-path 200ms cubic-bezier(.455,.03,.515,.955), -webkit-clip-path 200ms cubic-bezier(.455,.03,.515,.955);
+  pointer-events: none;
+}
+
+
+
+
+
+
+
+/* nav .logo-container .inner-container {
   display: flex;
   width: fit-content;
   gap: 1rem;
   transition: transform 300ms;
   width: 318px;
-}
+} */
 
-nav .logo-container:hover .inner-container {
+/* nav .logo-container:hover .inner-container {
   transform: translateX(-50%);
-}
+} */
 
 nav .center-container {
   display: flex;
@@ -49,37 +77,57 @@ nav ul {
 }
 
 nav li {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   font-weight: 500;
-  color: #ffffffbe;
-  min-width: 90px;
-  padding: 0.4rem 0;
-  position: relative;
+  color: #777777;
+  /* min-width: 90px; */
+  /* padding: 0.4rem 0; */
+  /* position: relative;
   overflow-y: hidden;
-  height: 50%;
+  height: 50%; */
+  /* border: 1px solid red; */
+  /* padding: 0.5rem 1rem; */
+  display: inline-block;
+
 }
 
-nav li span {
+
+.hero-layer-container li{
+  --size: 0%;
+  --x: 50%;
+  --y: 50%;
+  color: #fff;
+  clip-path: circle(var(--size) at var(--x) var(--y));
+  -webkit-clip-path: circle(var(--size) at var(--x) var(--y));
+  transition: clip-path 125ms cubic-bezier(.455,.03,.515,.955),  -webkit-clip-path 125ms cubic-bezier(.455,.03,.515,.955);
+  /* pointer-events: none; */
+}
+
+/* .hero-layer-container li:not(:last-child){
+  padding: 0.5rem 2rem;
+} */
+
+/* nav li span {
   display: flex;
   flex-direction: column;
   gap: 0.8rem;
   transition: all 300ms;
-}
+} */
 
-nav li:hover {
+/* nav li:hover {
   color: #fff;
-}
+} */
 
-nav li:hover span {
+/* nav li:hover span {
   transform: translateY(-50%);
-}
+} */
 
-nav li .line {
+/* nav li .line {
   position: relative;
   width: fit-content;
-}
+} */
 
-nav li:hover .line::before {
+/* nav li:hover .line::before {
   content: "";
   position: absolute;
   bottom: 2px;
@@ -98,12 +146,12 @@ nav li:hover .line::before {
   100% {
     width: 100%;
   }
-}
+} */
 
-nav span {
+/* nav span {
   font-size: 1rem;
   text-transform: uppercase;
-}
+} */
 
 @keyframes nav {
   0% {
