--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -182,6 +182,7 @@ header{
   transform: translate3d(0, 0, 0);
   transition: transform 300ms cubic-bezier(0.02, 1.23, 0.79, 1.08);
 
+  /* TODO */
   display: none;
 }
 
