--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,7 @@
 footer {
-  height: calc(100vh);
+  height: 100vh;
   background-color: #131313;
-  color: #fff;
+  color: #777777;
   transform-origin: 50% 90%;
   transition: all 200ms linear;
 }
@@ -72,49 +72,18 @@ footer {
   height: 100%;
 }
 
-.footer-email-number-wrapper {
-  width: 100%;
-  height: fit-content;
-  text-align: center;
-  margin-top: 2rem;
-  position: relative;
-  display: flow-root;
-}
-
-.contact-email-link,
-.contact-number-link {
-  font-size: max(1.5rem, 3vw);
+.contact-email-link {
+  font-size: max(1.2rem, 3vw);
   font-style: italic;
   font-weight: 600;
   display: block;
-
+  text-align: center;
+  display: inline-block;
   width: 100%;
 }
 
-.contact-number-link {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  background: red;
- transform: translateY(-50%);
-clip-path: inset(50% 0 50% 0);
-  /* transform: scaleY(0); */
-  transition: all 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.footer-email-number-wrapper:hover .contact-number-link {
-  clip-path: inset(0 0 0 0);
-}
-
-.contact-email-link .first,
-.contact-email-link .last,
-.contact-number-link .first,
-.contact-number-link .last {
-  display: inline-block;
-}
-
 .footer-first p {
-  margin: 0 auto;
+  margin: 0.5rem auto 0 auto;
   font-size: max(1.2rem, 2.2vw);
   line-height: 1.6;
   font-style: italic;
@@ -126,7 +95,6 @@ clip-path: inset(50% 0 50% 0);
   justify-content: space-between;
   align-items: flex-end;
   padding: 2rem;
-  border-top: 1px solid;
 }
 
 .footer-last-socials {
@@ -136,7 +104,19 @@ clip-path: inset(50% 0 50% 0);
 
 .footer-last-socials a {
   display: inline-block;
-  font-size: max(1rem, 1.2vw);
+  font-size: 1.1rem;
   text-transform: uppercase;
-  /* font-weight: 600; */
+}
+
+@media (max-width: 992px){
+  .footer-last-socials {
+    gap: 1rem;
+  }
+  .footer-last-socials a {
+    font-size: 1rem;
+  }
+  .footer-last {
+    
+    padding: 1rem;
+  }
 }
