--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,68 +1,28 @@
 nav {
-  /* background-color: var(--nav-bg); */
-  /* background: rgb(0, 0, 0); */
   background: rgba(0, 0, 0, 0.1);
-  padding: 2rem 0 2.5rem 0;
+  padding: 2rem 0.8rem 2.5rem 0;
   font-size: var(--nav-text-lg);
   animation: nav 5s linear infinite forwards;
-  /* position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100; */
 }
 
-/* nav .logo {
-  color: #777777;
-  text-transform: uppercase;
-  font-size: 1.1rem;
-} */
-
 nav .logo-container {
-  
   color: #777777;
   text-transform: uppercase;
   font-size: 1.3rem;
-/* border: 1px solid red; */
-height: fit-content;
-
-
-  /* width: 150px;
   height: fit-content;
-  overflow: hidden; */
-  
 }
 
-
-
-.hero-layer-container .logo-container{
+.hero-layer-container .logo-container {
   --size: 0%;
   --x: 50%;
   --y: 50%;
   color: #fff;
   clip-path: circle(var(--size) at var(--x) var(--y));
   -webkit-clip-path: circle(var(--size) at var(--x) var(--y));
-  transition: clip-path 200ms cubic-bezier(.455,.03,.515,.955), -webkit-clip-path 200ms cubic-bezier(.455,.03,.515,.955);
+  transition: clip-path 200ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    -webkit-clip-path 200ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   pointer-events: none;
 }
-
-
-
-
-
-
-
-/* nav .logo-container .inner-container {
-  display: flex;
-  width: fit-content;
-  gap: 1rem;
-  transition: transform 300ms;
-  width: 318px;
-} */
-
-/* nav .logo-container:hover .inner-container {
-  transform: translateX(-50%);
-} */
 
 nav .center-container {
   display: flex;
@@ -80,80 +40,20 @@ nav li {
   font-size: 1.2rem;
   font-weight: 500;
   color: #777777;
-  /* min-width: 90px; */
-  /* padding: 0 2rem; */
-  /* position: relative;
-  overflow-y: hidden;
-  height: 50%; */
-  /* border: 1px solid red; */
-  /* padding: 0.5rem 1rem; */
-  display: inline-block;
 
+  display: inline-block;
 }
 
-
-
-
-.hero-layer-container li{
+.hero-layer-container li {
   --size: 0%;
   --x: 50%;
   --y: 50%;
   color: #fff;
   clip-path: circle(var(--size) at var(--x) var(--y));
   -webkit-clip-path: circle(var(--size) at var(--x) var(--y));
-  transition: clip-path 125ms cubic-bezier(.455,.03,.515,.955),  -webkit-clip-path 125ms cubic-bezier(.455,.03,.515,.955);
-  /* pointer-events: none; */
+  transition: clip-path 125ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    -webkit-clip-path 125ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
-
-/* .hero-layer-container li:not(:last-child){
-  padding: 0.5rem 2rem;
-} */
-
-/* nav li span {
-  display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
-  transition: all 300ms;
-} */
-
-/* nav li:hover {
-  color: #fff;
-} */
-
-/* nav li:hover span {
-  transform: translateY(-50%);
-} */
-
-/* nav li .line {
-  position: relative;
-  width: fit-content;
-} */
-
-/* nav li:hover .line::before {
-  content: "";
-  position: absolute;
-  bottom: 2px;
-  left: 0;
-  z-index: -1;
-  height: 7px;
-  width: 0;
-  background: #000;
-  animation: nav-item 150ms linear 300ms 1 forwards;
-}
-
-@keyframes nav-item {
-  0% {
-    width: 0;
-  }
-  100% {
-    width: 100%;
-  }
-} */
-
-/* nav span {
-  font-size: 1rem;
-  text-transform: uppercase;
-} */
 
 @keyframes nav {
   0% {
@@ -4274,5 +4174,38 @@ nav li {
       98% 84.83%,
       100% 84.32%
     );
+  }
+}
+
+
+@media (max-width: 992px){
+  nav ul {
+    
+    gap: 1rem;
+  }
+  
+  nav li {
+    font-size: 1rem;
+  
+  }
+
+  nav .logo-container {
+    font-size: 1.1rem;
+  }
+}
+
+@media (max-width: 676px){
+  nav ul {
+    
+    gap: 0.5rem;
+  }
+  
+  nav li {
+    font-size: 0.9rem;
+  
+  }
+
+  nav .logo-container {
+    font-size: 1rem;
   }
 }
