--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,302 +1,119 @@
-.skills-container{
-    min-height: 100vh;
-    padding: 2rem 0;
-    display: grid;
-    place-items: center;
-    background-color: #eceff1;
-    /* border-bottom-left-radius: 100% 0%; */
-    /* border-bottom-right-radius: 50%; */
-   
+.skills-container {
+  height: 100vh;
+  padding: 2rem 0;
+  display: grid;
+  place-items: center;
+  background-color: #eceff1;
+  /* border-bottom-left-radius: 100% 0%; */
+  /* border-bottom-right-radius: 50%; */
+  transform-origin: 50% 90%;
+  transition: transform 275ms linear, opacity 275ms linear;
+  background-color: #131313;
+}
+
+.skills-title-container {
+  border: 1px solid;
+  padding: 1rem 2.5rem;
+  width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+  clip-path: polygon(0 0, 100% 24%, 100% 95%, 0 85%);
+  background: #000000d5;
+  color: #777777;
+  position: relative;
+
+}
+
+.skills-title-container h2 {
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+.skills-container .grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  height: 100%;
+  padding: 5px;
+  color: #777777;
+}
+
+.skills-container .first,
+.second,
+.third {
+  height: 100%;
+}
+
+.skills-container .first,
+.second,
+.third,
+.fourth {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  gap: 5px;
+}
+.skills-container .first-1,
+.second-1,
+.third-1,
+.fourth-1 {
+  border: 1px solid;
+  padding: 1rem 2rem;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  height: fit-content;
+}
+
+.skills-container .first-2,
+.second-2,
+.third-2,
+.fourth-2 {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.skills-container .grid-container span {
+  border: 1px solid;
+  padding: 0.8rem 1rem;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+
+  flex-grow: 1;
+  min-width: 25%;
+  text-align: center;
+}
+
+.skills-container .first-2,
+.third-2,
+.fourth-2 {
+  flex-direction: column;
+}
+
+.skills-container img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
+
+@media (max-width: 1024px) {
+  .skills-title-container{
+    margin-bottom: 2rem;
+  }
 }
 
 
+@media (max-width: 992px) {
+  .skills-container{
+    height: auto;
+  }
 
-
-
-
-
-.skills-title-container{
- border: 1px solid;
- padding: 1rem 2.5rem;
- width: fit-content;
- margin: 0 auto;
- margin-bottom: 4rem;
- clip-path: polygon(0 0, 100% 24%, 100% 95%, 0 85%);
- background: #000000d5;
- color: #fff;
- position: relative;
+  
+    .skills-container .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+      }
 }
-
-.skills-title-container h2{
-    font-size: 3rem;
-    font-weight: 600;
-}
-
-
-
-
-
-/* windmil */
-/* .windmil-container{
-    position: relative;
-    width: 400px;
-    height: 400px;
-    border: 1px solid;
-    border-radius: 9999px;
-}
-
-.windmil-container .center-bullet{
-
-    width: 30px;
-    height: 30px;
-    background: #000;
-    border-radius: 9999px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.windmil-container .leaf{
-    width: 60px;
-    height: 30px;
-    background: #000;
-    border-top-left-radius: 9999px;
-    border-bottom-left-radius: 99999px;
-    border-top-right-radius: 99999px;
-    border-bottom-right-radius: 50%;
-    position: absolute;
-}
-
-.windmil-container .leaf-1{
-top: 47%;
-left: 55%;
-transform: rotate(-10deg);
-}
-.windmil-container .leaf-2{
-top: 56%;
-left: 50%;
-transform: rotate(34deg);
-}
-.windmil-container .leaf-3{
-    top: 59%;
-    left: 40%;
-    transform: rotate(70deg);
-}
-.windmil-container .leaf-4{
-    top: 52%;
-    left: 31%;
-    transform: rotate(123deg);
-}
-.windmil-container .leaf-5{
-    top: 41%;
-    left: 31%;
-    transform: rotate(180deg);
-}
-.windmil-container .leaf-6{
-    top: 34%;
-    left: 40%;
-    transform: rotate(230deg);
-}
-.windmil-container .leaf-7{
-    top: 37%;
-    left: 51%;
-    transform: rotate(288deg);
-} */
-
-
-
-
-
-
-
-
-
-
-
-.skills-container .grid-container{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    /* border: 1px solid; */
-    height: 100%;
-    padding: 5px;
-}
-
-.skills-container .first, .second, .third{
-    /* border: 1px solid red; */
-    height: 100%;
-}
-
-
-
-
-
-.skills-container .first, .second, .third, .fourth{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    gap: 5px;
-}
-.skills-container .first-1, .second-1, .third-1, .fourth-1{
-    border: 1px solid gold;
-    padding: 1rem 2rem;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    font-weight: 500;
-    height: fit-content;
-}
-
-.skills-container .first-2, .second-2, .third-2, .fourth-2{
-   
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-}
-
-.skills-container .grid-container span{
-    border: 1px solid greenyellow;
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     gap: 4px;
-
-    flex-grow: 1;
-    min-width: 25%;
-    text-align: center;
-}
-
-.skills-container .first-2, .third-2, .fourth-2{
-    flex-direction: column;
-}
-
-
-.skills-container img{
-    width: 20px;
-    height: 20px;
-    /* border-radius: 50%; */
-    object-fit: contain;
-}
-
-
-
-
-
-
-
-
-/* .skills-container .second{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    gap: 5px;
-} */
-/* .skills-container .second-1{
-    border: 1px solid gold;
-    padding: 1rem 2rem;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    font-weight: bold;
-    height: fit-content;
-} */
-
-/* .skills-container .second-2{
-   
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-} */
-
-/* .skills-container .second-2 span{
-    border: 1px solid greenyellow;
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-
-
-    flex-grow: 1;
-    min-width: 25%;
-    text-align: center;
-} */
-
-
-
-
-
-
-
-
-
-
-
-/* .skills-container .third{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    gap: 5px;
-} */
-/* .skills-container .third-1{
-    border: 1px solid gold;
-    padding: 1rem 2rem;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    font-weight: bold;
-    height: fit-content;
-} */
-
-/* .skills-container .third-2{
-   
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-} */
-
-/* .skills-container .third-2 span{
-    border: 1px solid greenyellow;
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-    flex-grow: 1;
-    min-width: 25%;
-
-    text-align: center;
-} */
-
-
-
-
-
-/* .skills-container .fourth{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    gap: 5px;
-} */
-/* .skills-container .fourth-1{
-    border: 1px solid gold;
-    padding: 1rem 2rem;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    font-weight: bold;
-    height: fit-content;
-} */
-
-/* .skills-container .fourth-2{
-   
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-} */
-
-/* .skills-container .fourth-2 span{
-    border: 1px solid greenyellow;
-    padding: 0.8rem 1rem;
-    border-radius: 4px;
-    flex-grow: 1;
-    min-width: 25%;
-
-    text-align: center;
-} */
