--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,123 +1,16 @@
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
-
-
-:root{
+:root {
   --max-width: 1400px;
   --nav-bg: #a3a59e;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -125,51 +18,46 @@ html,
 body {
   min-width: 100vw;
   overflow-x: hidden;
- 
 }
 
-body{
+body {
   background-color: #000;
 }
-
-
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-.center-container{
+.center-container {
   max-width: var(--max-width);
   margin: 0 auto;
   padding: 0.5rem;
 }
 
-header{
- 
+header {
 }
 
-
-#smooth-wrapper{
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-    min-height: 100vh; 
-     /* -webkit-transform-origin: top left;
+#smooth-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  /* -webkit-transform-origin: top left;
     transform-origin: top left;
      -webkit-transform: translate3D(-159vw,-200vh,0) scale(36);
     transform: translate3D(-159vw,-200vh,0) scale(36);  */
 }
 
-.cursor-element{
+.cursor-element {
   background: #fff;
   width: 20px;
   height: 20px;
@@ -178,7 +66,6 @@ header{
   z-index: 999;
   top: 0;
   left: 0;
-/* opacity: 0; */
   transform: translate3d(0, 0, 0);
   transition: transform 300ms cubic-bezier(0.02, 1.23, 0.79, 1.08);
 
@@ -186,9 +73,65 @@ header{
   display: none;
 }
 
-button{
+button {
   background-color: transparent;
   border: none;
   font: inherit;
   color: #fff;
+}
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100vw;
+  height: 100vh;
+
+  display: grid;
+  place-items: center;
+  background-color: #131313;
+  transform: translateY(-100%);
+  transition: transform 500ms cubic-bezier(0.7, 0, 0.2, 1);
+}
+
+.isLoaderShow {
+  transform: translateY(0%);
+}
+
+.loader .text-wrap {
+  position: relative;
+}
+
+.loader .text-wrap > h1 {
+  font-size: 6rem;
+  font-weight: 900;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-transform: uppercase;
+  transform: translate(-50%, -50%);
+}
+
+.loader .text-wrap .first {
+  color: #fff;
+}
+.loader .text-wrap .last {
+  color: #777;
+  transition: clip-path 2s linear, -webkit-clip-path 2s linear;
+}
+
+.loader .text-wrap .last.startCliping {
+  animation: clipPath 2s linear 1 forwards;
+}
+
+@keyframes clipPath {
+  from {
+    clip-path: inset(0 0 0 0);
+    -webkit-clip-path: inset(0 0 0 0);
+  }
+  to {
+    clip-path: inset(100% 0 0 0);
+    -webkit-clip-path: inset(100% 0 0 0);
+  }
 }
