--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -126,6 +126,20 @@
     15% 85%,
     0% 85%
   );
+  -webkit-clip-path: polygon(
+    0% 15%,
+    15% 15%,
+    15% 0%,
+    85% 0%,
+    85% 15%,
+    100% 15%,
+    100% 85%,
+    85% 85%,
+    85% 100%,
+    15% 100%,
+    15% 85%,
+    0% 85%
+  );
 }
 
 .about-socials .mask {
@@ -138,12 +152,14 @@
   left: 0;
   padding-left: 0.8rem !important;
   clip-path: inset(50% 0 50% 0);
+  -webkit-clip-path: inset(50% 0 50% 0);
 
-  transition: clip-path 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: clip-path 400ms cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-clip-path 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 .about-socials li:hover .mask {
   clip-path: inset(0 0 0 0);
+  -webkit-clip-path: inset(0 0 0 0);
 }
 
 .resume-mask {
