--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -40,7 +40,7 @@ nav li {
   font-size: 1.2rem;
   font-weight: 500;
   color: #777777;
-
+cursor: pointer;
   display: inline-block;
 }
 
@@ -53,6 +53,7 @@ nav li {
   -webkit-clip-path: circle(var(--size) at var(--x) var(--y));
   transition: clip-path 125ms cubic-bezier(0.455, 0.03, 0.515, 0.955),
     -webkit-clip-path 125ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    cursor: pointer;
 }
 
 @keyframes nav {
